src/test/ui/consts/issue-37550-1.rs
const fn x() {
    let t = true;
    let x = || t; //~ ERROR function pointer
}

fn main() {}
